# devtrace-cli

./: .gitignore  Ref_CLI.md  pyproject.toml  rules.toml  to_read.md
Docs/: cli_reqirements.md  srs.md  to_read.md  tool_arch.md
src/devtrace/: main.py
src/devtrace/commands/: init.py
