[project]
name = "devtrace"
version = "0.1.0"
description = "Seamless Jira ↔ Git bridge CLI: auto-smart commits, ticket context persistence, branch management, and real-time PM visibility without browser hell."
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Utsav", email = "utsavsssingh@gmail.com"},
]
keywords = ["cli", "debug", "trace", "developer-tools", "rich", "typer"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Utilities",
]

dependencies = [
    "rich >= 14.3.1",
    "typer >= 0.21.1",
]


[project.scripts]
devtrace = "devtrace.main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devtrace"]
